Add footer section.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "responsive-website-react-tailwind",
+  "homepage": "https://paulfigueroa.me/wp-content/uploads/projects/react/react-tailwind-css-bank-website-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
